# nomad-runner

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yaml  rust.yaml
examples/: README.md  nomad-job.hcl
src/: exec.rs  gitlab.rs  lib.rs  main.rs  nomad.rs
tests/: nomad_events.rs  script.sh
