[package]
name = "nomad-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.8", features = ["derive", "env"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"], default_features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["macros", "rt"] }
tokio-tungstenite = { version = "0.19.0", features = ["stream"] }
url-builder = "0.1.1"
urlencoding = "2.1.2"
