[package]
name = "nomad-runner"
version = "0.2.1"
edition = "2021"
rust-version  = "1.70"
description = "A custom Gitlab CI Runner to run Jobs on a nomad cluster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.3.8", features = ["derive", "env"] }
env_logger = "0.11.8"
futures-util = "0.3.28"
log = "0.4.19"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default_features = false }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.34"
tokio = { version = "1.29.0", features = ["macros", "rt", "fs", "sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["stream"] }
tokio-util = "0.7.16"
url-builder = "0.1.1"
urlencoding = "2.1.2"
